tests/paczka1/fuzzy1/43742163.err
Error in line 4: bxOBJbDGtri A955 78,2
Error in line 15: cvR40e3rC A210 21,0
Error in line 19: xb75J0 A65 58,6
Error in line 36: H064xDO A663 171,70
